--- a/package.json
+++ b/package.json
@@ -30,6 +30,14 @@
     "q": "^1.5.1"
   },
   "standard": {
-    "global": [ "q" ]
+    "global": [
+      "q"
+    ],
+    "env": [
+      "mocha"
+    ]
+  },
+  "devDependencies": {
+    "chai": "^4.1.2"
   }
 }
